# test_task_ittas

./: .gitignore  CMakeLists.txt  README
client/: CMakeLists.txt  client.cpp
server/: CMakeLists.txt  json_helper.hpp  server.cpp  server.json
